- disable liquid and water sliders when beaker is full?

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- add cursors to all things that are interactive
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc
- organize imports


DONE:
******* version 0.00.12 (23089)
7/10/08 - fix: resolve Laurie's problem by replacing ScaleAlphaImageOpARGB with image files for big, transparent molecules
7/10/08 - remove scaling of small molecule images, scale the image files
7/10/08 - change sim description
7/10/08 - add sim description
7/10/08 - organize imports
7/10/08 - fix: hand cursor should be on faucet slider knob only, not on track
7/10/08 - fix: select some liquid (eg, blood), change pH, selecting blood again doesn't do anything
******* version 0.00.11 (23070)
7/9/08 - organize imports
7/9/08 - make icons in molecule view transparent
7/9/08 - add BufferedImageUtils.scaleAlpha
7/9/08 - add developer control for switching to alternate (simpler) molecule count view
7/9/08 - implement the molecule count view shown in the design doc
7/9/08 - add Shapes and nodes for bars, but shapes are not updated yet
7/9/08 - add zoom buttons to bar graph, wire them up to tick labels
7/9/08 - wire up log/linear scale control to bar graph
7/9/08 - add linear ticks and labels to bar graph
7/9/08 - add simple format for 0 and 1 exponents to ConstantPowerOfTenNumberFormat
7/9/08 - fix some constructors to take Liquid instead of PHScaleModel
7/9/08 - adjust layout of bar graph components
7/9/08 - add labels to major log tick marks
7/9/08 - add log tick marks to bar graph
7/9/08 - change color of pH probe tip to black (Trish request)
7/9/08 - change default liquid to milk (Trish request)
******* version 0.00.10 (23045)
7/9/08 - reset Custom pH to 7 when user explicitly selects it
7/9/08 - add LiquidDescriptorListener.pHChanged