@@ -35,6 +35,11 @@ CLEANUP:
 
 
 DONE:
+7/11/08 - do a quick approximating of lining up pH slider with bar graph ticks
+7/11/08 - fix layout of everything
+7/11/08 - increase height of graph
+7/11/08 - increase size of beaker
+7/10/08 - molecule count check box off by default
 ******* version 0.00.12 (23089)
 7/10/08 - fix: resolve Laurie's problem by replacing ScaleAlphaImageOpARGB with image files for big, transparent molecules
 7/10/08 - remove scaling of small molecule images, scale the image files
